Fix code +  add memory