@@ -3,6 +3,7 @@ package com.ai.tester.deleteEvenGames;
 import com.ai.tester.allure.AllureSteps;
 import com.ai.tester.model.api.json.DeleteEvenVideoGamesResponseModel;
 import com.ai.tester.model.db.VideoGameDbModel;
+import io.qameta.allure.TmsLink;
 import io.restassured.http.ContentType;
 import io.restassured.response.Response;
 import lombok.extern.log4j.Log4j2;
@@ -19,21 +20,21 @@ import static org.assertj.core.api.Assertions.assertThat;
 class DeleteEvenVideoGamesComponentTest extends DeleteEvenVideoGamesBaseTest {
 
     @Test
+    @TmsLink("XSP-98")
     @DisplayName("DeleteEvenGames – Even ID games are deleted and odd ID games remain in database")
     void deleteEvenVideoGamesPositiveTest() {
         // Given
         List<VideoGameDbModel> gamesToBeDeleted = AllureSteps.logStepAndReturn(log,
-            "Fetch first even ID games to be deleted from database",
-            () -> {
-                List<VideoGameDbModel> games = dbClient.getAllVideoGames().stream()
-                    .filter(game -> game.getId() % 2 == 0)
-                    .limit(DELETE_LIMIT)
-                    .toList();
-                assertThat(games)
-                    .as("Database should contain at least one even ID game before the request")
-                    .isNotEmpty();
-                return games;
-            });
+            "Fetch even ID games from database",
+            () -> dbClient.getAllVideoGames().stream()
+                .filter(game -> game.getId() % 2 == 0)
+                .limit(DELETE_LIMIT)
+                .collect(java.util.stream.Collectors.toList()));
+
+        AllureSteps.logStep(log, "Confirm database contains at least one even ID game (precondition)",
+            () -> assertThat(gamesToBeDeleted)
+                .as("Database should contain at least one even ID game before the request")
+                .isNotEmpty());
 
         int expectedDeletedCount = gamesToBeDeleted.size();
         String expectedStatus = String.format(EXPECTED_STATUS_TEMPLATE, expectedDeletedCount);
